[tool.poetry]
name = "arxiv-retriever"
version = "0.1.0"
description = "\"Automate your ArXiv paper search and retrieval process.\""
authors = ["Excel Chukwu <excel.chukwu1.0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = ">=0.12.3"
pytest = ">=8.2.2"
requests = ">=2.32.3"
pytest-mock = ">=3.14.0"
certifi = ">=2024.7.4"
charset-normalizer = ">=3.3.2"
click = ">=8.1.7"
idna = ">=3.7"
iniconfig = ">=2.0.0"
markdown-it-py = ">=3.0.0"
mdurl = ">=0.1.2"
packaging = ">=24.1"
pluggy = ">=1.5.0"
pygments = ">=2.18.0"
rich = ">=13.7.1"
shellingham = ">=1.5.4"
typing-extensions = ">=4.12.2"
urllib3 = ">=2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
